<resources>
    <string name="app_name">nomnom</string>
    <string name="order_your_favourite_food">Order your favourite food</string>
    <string name="designed_by_npriyanka">Designed By\nPriyanka</string>
    <string name="logo">logo</string>
    <string name="order_your_favourite_food_">Order your favourite food</string>
    <string name="designed_by_n_priyanka">Designed by \n Priyanka</string>
    <string name="hello">hello</string>
    <string name="hello_">hello</string>
    <string name="nomnom">NOMNOM</string>
    <string name="dinner">dinner</string>
    <string name="enjoy_restaurants_quality_meals_n_at_home">Enjoy restaurants quality meals \n at home</string>
    <string name="next">Next</string>
    <string name="fb">fb</string>
    <string name="gulugulu">gulugulu</string>
    <string name="continue_with">Continue With</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="deliver_your_favii_foods">Deliver your favii foods</string>
    <string name="nomnom_">NomNom</string>
    <string name="not_a_user_signup">Not a user , signup!!</string>
    <string name="login">Login</string>
    <string name="google">google</string>
    <string name="signup">Signup!!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_">signup</string>
    <string name="burger">burger</string>
    <string name="name">Name</string>
    <string name="login_from_here">Login from here</string>
    <string name="login_from_here_">Login from here</string>
    <string name="default_web_client_id">clientid\n</string>
    <string name="our_menu">OUR MENU</string>
    <string name="smomo">smomo</string>
    <string name="fmomo">fmomo</string>
    <string name="san">san</string>
    <string name="cc">cc</string>
    <string name="dosa">dosa</string>
    <string name="pf">pf</string>
    <string name="man">man</string>
    <string name="nod">nod</string>
    <string name="view_cart">View cart</string>
</resources>