<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE8E8"
    tools:context=".loginactivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/taco" />

    <!-- App Name -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bagel_fat_one"
        android:text="@string/nomnom_"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3" />

    <!-- Tagline -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/login_to_your_account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="328dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@android:drawable/sym_action_email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="328dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- OR Text -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/or"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword" />

    <!-- Continue With -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/continue_with"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <!-- Google Login -->
    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:contentDescription="@string/google"
        android:onClick="openGoogleLogin"
        app:layout_constraintTop_toBottomOf="@id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        app:srcCompat="@drawable/g2" />

    <!-- Facebook Login -->

    <!-- Login Button -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="212dp"
        android:clickable="true"
        android:contentDescription="@string/fb"
        android:onClick="openFacebookLogin"
        app:layout_constraintStart_toEndOf="@id/imageView9"
        app:layout_constraintTop_toBottomOf="@id/textView7"
        app:srcCompat="@drawable/f2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        android:clickable="true"
        android:onClick="loginUser"/>

    <!-- Signup Redirect -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/not_a_user_signup"
        android:clickable="true"
        android:onClick="openSignupActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button3" />
</androidx.constraintlayout.widget.ConstraintLayout>
