<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE8E8">

    <ImageView
        android:id="@+id/dinner"
        android:layout_width="407dp"
        android:layout_height="303dp"
        android:contentDescription="@string/dinner"
        app:srcCompat="@drawable/dinner"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="84dp" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="#101010"
        android:background="@drawable/buttongradient"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteY="634dp"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="32dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="301dp"
        android:layout_height="66dp"
        android:fontFamily="@font/kalam_light"
        android:text="@string/enjoy_restaurants_quality_meals_n_at_home"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dinner" />

</androidx.constraintlayout.widget.ConstraintLayout>